objects/amazonconnect__AC_ContactChannelAnalytics__c.object
<CustomObject>
    <fields>
        <fullName>amazonconnect__Channel__c</fullName>
        <label>Channel</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__ContactId__c</fullName>
        <externalId>true</externalId>
        <label>Contact Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__DominantLanguage__c</fullName>
        <label>Dominant Language</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Keywords__c</fullName>
        <label>Keywords</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>amazonconnect__NamedEntities__c</fullName>
        <label>Named Entities</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Sentiment__c</fullName>
        <label>Sentiment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AC Contact Channel Analytics</label>
    <listViews>
        <fullName>Test_Queue_AC_ContactChannelAnalytics</fullName>
        <filterScope>Queue</filterScope>
        <label>Test_Queue</label>
        <queue>Test_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>amazonconnect__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CCA {000000}</displayFormat>
        <label>Contact Channel Analytics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AC Contact Channel Analytics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>